# ltfmselector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
doc/: 00Introduction.tex  01ReinforcementLearning.tex  02MDP.tex  03DQL.tex  04ExampleDQL.tex  05PatSpecFMS_AgentEnv.tex  06LTFM.tex  07LTFMSMS.tex  08Results.tex  09Discussion.tex  10Conclusion.tex  Makefile  abstract.tex  main.tex  references.bib
doc/figures/: InversedPendulum.eps  PendulumDuration.eps  ReinforcementLearning.eps
dqntutorial/: CartPoleStates.npz  DQNTutorial_byPaszke.ipynb  DQNTutorial_byPaszke_LoggerTQDM.ipynb  EpsDecay.eps  PendulumDuration.eps  QValuesPendulum.eps  Q_TargetValuesPendulum.eps  ReadAnalyzeStates.ipynb
examples/: 00_classification.ipynb  classification.ipynb  readresults.py  tempResults  train_rmlater.py  train_wLinearIncrease.py
src/ltfmselector/: LTFMSelector.py  __init__.py  _ltfmselector.py  env.py  logger.py  ltfmselector.py  ltfmselector2.py  test.ipynb  test.py  utils.py
tests/: test_save_load.py
