[project]
name = "ltfmselector"
version = "1.0.4"
description = "Locally-Tailored Feature and Model Selector with Deep Q-Learning"
readme = "README.md"
authors = [
    { name = "RenZhen95", email = "jliawpro@outlook.de" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy<2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn<1.6",
    "shap>=0.49.1",
    "tensorboard>=2.20.0",
    "torch>=2.6.0",
    "tqdm>=4.67.3",
]
license = {file = "LICENSE"}

[project.urls]
GitHub = "https://github.com/RenZhen95/ltfmselector/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "multipledispatch>=1.0.0",
    "pytest>=8.4.1",
    "read-dataframe>=0.0.2",
]
